--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <HTML>
 <HEAD>
 <TITLE>MySQL Mentor</TITLE>
+<style>
+body {
+    background-color: #ffffff;
+}
+</style>
 </HEAD>
 <BODY>
 <H1>MySQL Mentor</H1>
-Welcome to MySQL Mentor
+Welcome to MySQL Mentor!  The MySQL Community is growing, vibrant, and welcomes you.  The is a resource for 
+<A href="#ment"></A>Mentoring</a>, <a href="#cert">Certification</a>, and listing other Resources.
+
+<h2><A name="ment">Mentoring</A></h2>
+We would like to establish a MySQL version of the wonderful <a href="http://phpmentoring.org">PHP Mentoring</a> website 
+with a formal mentoring process.
+
+<h2><A href="#cert"></A>Certification</a></h2>
 </BODY>
 </HTML>
