--- a/56certs.html
+++ b/56certs.html
@@ -1,20 +1,29 @@
 <HTML><HEAD><TITLE>MySQL Certifications Currently Offered</TITLE></HEAD>
 <BODY>
-<h1>MySQL Certifications Oracle currently offers two certification exams</h1>
+<h1>MySQL Certifications Oracle Exams</h1>
+<P>MySQL Certifications Oracle currently offers two certification exams. <b>Exam 1Z0-883</b> is for the <i>Oracle Certified 
+Professional, MySQL 5.6 Database Administrator</i> certification and <b>exam 1Z0-882</b> is for <i></i>Oracle Certified 
+Professional, MySQL 5.6 Developer</i> certiciation. As of September 2015 there is a 20% discount for those taking both exams that includes one free retake. See https://www.mysql.com/certification/
+</p>
 
-Exam 1Z0-883 is for the Oracle Certified Professional, MySQL 5.6 Database Administrator and exam 1Z0-882 is for Oracle Certified Professional, MySQL 5.6 Developer . As of September 2015 there is a 20% discount for those taking both exams that includes one free retake. See https://www.mysql.com/certification/
-
-MySQL 5.6 Database Administrator
+<h2></h2>MySQL 5.6 Database Administrator</h2>
 
 Exam price is $245 Exam length is 150 minutes Number of questions is 100 multiple choice format Passing score is 64 percent Subject matter is based on General Availability (GA) versions of MySQL 5.6.
 
-Exam topics
+<h3></h3>Exam topics
 
-MySQL Architecture
+<ul></ul>MySQL Architecture
 
-Use MySQL client programs to interface with the MySQL Server interactively and in batch Describe how MySQL uses disk and memory resources List and describe key characteristics of standard MySQL storage engines including InnoDB, NDB, MyISAM, MEMORY, FEDERATED MySQL Server Installation, Configuration and Maintenance
+<li></li>Use MySQL client programs to interface with the MySQL Server interactively and in batch</li> 
+<li>Describe how MySQL uses disk and memory resources</li> 
+<li>List and describe key characteristics of standard MySQL storage engines including InnoDB, NDB, MyISAM, MEMORY, FEDERATED</li> 
+<li>MySQL Server Installation, Configuration and Maintenance</li>
 
-Select, deploy, start and stop MySQL using appropriate binary packages for Windows and Linux platforms Configure MySQL Server deployments using options files, command-line options and server variables. *Identify, configure, locate and describe appropriate use cases for MySQL the error, binary, general query and slow query log. MySQL Security
+Select, deploy, start and stop MySQL using appropriate binary packages for Windows and Linux platforms 
+Configure MySQL Server deployments using options files, command-line options and server variables. *
+Identify, configure, locate and describe appropriate use cases for MySQL the error, binary, general query and slow query log. 
+</ul>
+<ul></ul>MySQL Security</ul?
 
 Describe appropriate steps to secure a MySQL deployment at the operating system, filesystem and network levels. Create and maintain user accounts with appropriate privileges and configuration. Deploy and configure MySQL Enterprise Audit Diagnostic Data and Metadata Sources in MySQL Configure and leverage PERFORMANCE_SCHEMA tables to identify and diagnose performance problems. Obtain MySQL metadata from INFORMATION_SCHEMA tables Optimizing MySQL Performance
 
