Add LI/UL elements

--- a/56certs.html
+++ b/56certs.html
@@ -6,54 +6,107 @@ Professional, MySQL 5.6 Database Administrator</i> certification and <b>exam 1Z0
 Professional, MySQL 5.6 Developer</i> certiciation. As of September 2015 there is a 20% discount for those taking both exams that includes one free retake. See https://www.mysql.com/certification/
 </p>
 
-<h2></h2>MySQL 5.6 Database Administrator</h2>
+<h2>MySQL 5.6 Database Administrator</h2>
 
 Exam price is $245 Exam length is 150 minutes Number of questions is 100 multiple choice format Passing score is 64 percent Subject matter is based on General Availability (GA) versions of MySQL 5.6.
 
 <h3></h3>Exam topics
 
 <ul></ul>MySQL Architecture
-
 <li></li>Use MySQL client programs to interface with the MySQL Server interactively and in batch</li> 
 <li>Describe how MySQL uses disk and memory resources</li> 
 <li>List and describe key characteristics of standard MySQL storage engines including InnoDB, NDB, MyISAM, MEMORY, FEDERATED</li> 
-<li>MySQL Server Installation, Configuration and Maintenance</li>
-
-Select, deploy, start and stop MySQL using appropriate binary packages for Windows and Linux platforms 
-Configure MySQL Server deployments using options files, command-line options and server variables. *
-Identify, configure, locate and describe appropriate use cases for MySQL the error, binary, general query and slow query log. 
+</ul>
+<ul>MySQL Server Installation, Configuration and Maintenance</ul>
+<li?Select, deploy, start and stop MySQL using appropriate binary packages for Windows and Linux platforms</li>
+<li>Configure MySQL Server deployments using options files, command-line options and server variables.</li>
+<li></li>Identify, configure, locate and describe appropriate use cases for MySQL the error, binary, general query and slow query log.</li> 
 </ul>
 <ul></ul>MySQL Security</ul?
+<li>Describe appropriate steps to secure a MySQL deployment at the operating system, filesystem and network levels.</li>
+<li>Create and maintain user accounts with appropriate privileges and configuration.</li>
+<li>Deploy and configure MySQL Enterprise Audit</li>
+</ul>
+<ul></ul>Diagnostic Data and Metadata Sources in MySQL
+<li>Configure and leverage PERFORMANCE_SCHEMA tables to identify and diagnose performance problems.</li>
+<li>Obtain MySQL metadata from INFORMATION_SCHEMA tables</li>
+<ul></ul>Optimizing MySQL Performance
+<li>Demonstrate ability to diagnose and optimize poorly-performing queries.</li>
+  <li></li>Tune MySQL Server configuration for best performance.</li>
+  <li>Apply best practices in optimizing schema objects Demonstrate understanding of locking concepts as applied to MySQL Server and storage engines.</li>
+  <li>Create and utilize table PARTITIONING</li>
+  </ul>
+  <ul></ul>Backups and Recovery in MySQL
+<li>Create and restore logical backups using mysqldump</li>
+<li>Create and restore binary backups</li>
+<li?Use backups for data recovery</li>
+</ul>
+<ul></ul>High Availability Techniques for MySQL
+<li>Describe, configure, deploy and troubleshoot MySQL replication</li>
+<li>Describe and contrast characteristics of common MySQL high availability solutions (MySQL Cluster, DRBD, Windows Failover Clustering, Solaris Cluster, OVM Template for MySQL Enterprise)</li>
+</ul>
 
-Describe appropriate steps to secure a MySQL deployment at the operating system, filesystem and network levels. Create and maintain user accounts with appropriate privileges and configuration. Deploy and configure MySQL Enterprise Audit Diagnostic Data and Metadata Sources in MySQL Configure and leverage PERFORMANCE_SCHEMA tables to identify and diagnose performance problems. Obtain MySQL metadata from INFORMATION_SCHEMA tables Optimizing MySQL Performance
-
-Demonstrate ability to diagnose and optimize poorly-performing queries. Tune MySQL Server configuration for best performance. Apply best practices in optimizing schema objects Demonstrate understanding of locking concepts as applied to MySQL Server and storage engines. Create and utilize table PARTITIONING Backups and Recovery in MySQL
-
-Create and restore logical backups using mysqldump Create and restore binary backups Use backups for data recovery High Availability Techniques for MySQL
-
-Describe, configure, deploy and troubleshoot MySQL replication Describe and contrast characteristics of common MySQL high availability solutions (MySQL Cluster, DRBD, Windows Failover Clustering, Solaris Cluster, OVM Template for MySQL Enterprise) MySQL 5.6 Developer
+<h2>MySQL 5.6 Developer</h2>
 
 Exam price is $245 Exam length is 150 minutes Number of questions is 100 multiple choice format Passing score is 64 percent Subject matter is based on General Availability (GA) versions of MySQL 5.6.
 
-Exam Topics
+<h3>Exam Topics</h3>
 
-MySQL Architecture
-
-Use MySQL client programs to interface with the MySQL Server interactively and in batch Describe SQL Modes and their impact on behavior of MySQL Identify characteristics which have session scope General MySQL Syntax
-
-Explain MySQL implementation of identifiers including case sensitivity, qualified names, aliases and use of reserved words Identify MySQL data type properties and appropriate usage Recognize and use common functions and expressions for all MySQL data types Identify and use comment syntax Describe and utilize prepared statements Describe transactions and transaction isolation levels and the impact they have on database behavior Creation and Design of MySQL Schema Objects
-
-Design and create normalized databases Create and modify tables using appropriate data types and indexing Describe and create table constraints enforcing data integrity Creating and modifying views Identify and use various methods to obtain metadata for MySQL database objects Creation, Design and Use of MySQL Stored Programs
-
-Describe and use triggers Create and execute stored procedures *Create and use stored functions Implement error handling within stored procedures Querying for Data
-
-Execute a basic SELECT statement Limit rows returned by a SELECT statement Limit columns returned by a SELECT statement Apply sorting to SELECT statement results Execute SELECT statements which aggregate and group data Modifying Data
-
-Describe and execute INSERT statements Describe and execute REPLACE statements Describe and execute UPDATE statements Describe and execute TRUNCATE statements Describe and execute LOAD DATA statements Describe and execute DELETE statements Joins, subqueries and UNION
-
-Identify, describe and use JOINs in MySQL commands Describe and utilize subqueries in MySQL commands Perform operations using UNION clause MySQL Application Development
-
-Identify key characteristics, features and options for PHP, Java and .NET development using MySQL standard drivers Write a basic Java application that uses MySQL Write a basic PHP application that uses MySQL Write a basic .NET application that uses MySQL Interpret MySQL error messages Collect available diagnostic information Describe and use NoSQL and memcached API Basic Optimizations
-
-Identify statements requiring optimization Recognize and create optimal indexes for query optimization Recognize and fix sub-optimal SQL commands Identify appropriate optimization strategies for InnoDB usage Optimize performance through data normalization
+<uL>MySQL Architecture
+<li><Use MySQL client programs to interface with the MySQL Server interactively and in batch/li> 
+<li>Describe SQL Modes and their impact on behavior of MySQL</li> 
+<li>Identify characteristics which have session scope</li> 
+<ul>General MySQL Syntax
+<li>Explain MySQL implementation of identifiers including case sensitivity, qualified names, aliases and use of reserved words</li>
+<li>Identify MySQL data type properties and appropriate usage</li>
+<li>Recognize and use common functions and expressions for all MySQL data types</li>
+<li>Identify and use comment syntax</li>
+<li>Describe and utilize prepared statements</li>
+<li>Describe transactions and transaction isolation levels and the impact they have on database behavior</li> 
+</ul>
+<ul>Creation and Design of MySQL Schema Objects
+<li>Design and create normalized databases</li>
+<li>Create and modify tables using appropriate data types and indexing</li>
+<li>Describe and create table constraints enforcing data integrity</li>
+<li>Creating and modifying views</li>
+<li>Identify and use various methods to obtain metadata for MySQL database objects</li>
+<ul>Creation, Design and Use of MySQL Stored Programs
+</li>Describe and use triggers</li>
+<li>Create and execute stored procedures</li>
+<li>Create and use stored functions</li>
+<li>Implement error handling within stored procedures</li>
+</ul>
+<ul>Querying for Data
+<li>Execute a basic SELECT statement</li>
+<li>Limit rows returned by a SELECT statement</li>
+<li>Limit columns returned by a SELECT statement</li>
+<li>Apply sorting to SELECT statement results</li>
+<li>Execute SELECT statements which aggregate and group data</li>
+<ul>Modifying Data
+<li>Describe and execute INSERT statements</li>
+</li>Describe and execute REPLACE statements</li>
+<li>Describe and execute UPDATE statements</li>
+<li>Describe and execute TRUNCATE statements</li>
+<li>Describe and execute LOAD DATA statements</li><li>Describe and execute DELETE statements</li>
+</ul>
+<ul>Joins, subqueries and UNION
+<li>Identify, describe and use JOINs in MySQL commands</li> 
+<li>Describe and utilize subqueries in MySQL commands</li>
+<li>Perform operations using UNION clause</li> 
+<ul>MySQL Application Development
+<li>Identify key characteristics, features and options for PHP, Java and .NET development using MySQL standard drivers</li>
+<li>Write a basic Java application that uses MySQL</li>
+<li>Write a basic PHP application that uses MySQL</li>
+<li>Write a basic .NET application that uses MySQL</li>
+<li>Interpret MySQL error messages</li><li>Collect available diagnostic information</li>
+<li>Describe and use NoSQL and memcached API</li> 
+</uL>
+<ul>Basic Optimizations
+<li>Identify statements requiring optimization</li>
+<li>Recognize and create optimal indexes for query optimization</li>
+<li>Recognize and fix sub-optimal SQL commands</li>
+<li>Identify appropriate optimization strategies for InnoDB usage</li>
+<li>Optimize performance through data normalization</li>
+</ul>
+<hr width=50%>
 </body></html>
