UL double check

--- a/56certs.html
+++ b/56certs.html
@@ -12,36 +12,44 @@ Exam price is $245 Exam length is 150 minutes Number of questions is 100 multipl
 
 <h3></h3>Exam topics
 
-<ul></ul>MySQL Architecture
-<li></li>Use MySQL client programs to interface with the MySQL Server interactively and in batch</li> 
+<ul>MySQL Architecture
+<li>Use MySQL client programs to interface with the MySQL Server interactively and in batch</li> 
 <li>Describe how MySQL uses disk and memory resources</li> 
-<li>List and describe key characteristics of standard MySQL storage engines including InnoDB, NDB, MyISAM, MEMORY, FEDERATED</li> 
+<li>List and describe key characteristics of standard MySQL storage engines including 
+InnoDB, NDB, MyISAM, MEMORY, FEDERATED</li> 
 </ul>
+
 <ul>MySQL Server Installation, Configuration and Maintenance</ul>
 <li?Select, deploy, start and stop MySQL using appropriate binary packages for Windows and Linux platforms</li>
 <li>Configure MySQL Server deployments using options files, command-line options and server variables.</li>
 <li></li>Identify, configure, locate and describe appropriate use cases for MySQL the error, binary, general query and slow query log.</li> 
 </ul>
+
 <ul></ul>MySQL Security</ul?
 <li>Describe appropriate steps to secure a MySQL deployment at the operating system, filesystem and network levels.</li>
 <li>Create and maintain user accounts with appropriate privileges and configuration.</li>
 <li>Deploy and configure MySQL Enterprise Audit</li>
 </ul>
+
 <ul></ul>Diagnostic Data and Metadata Sources in MySQL
 <li>Configure and leverage PERFORMANCE_SCHEMA tables to identify and diagnose performance problems.</li>
 <li>Obtain MySQL metadata from INFORMATION_SCHEMA tables</li>
+</ul>
+
 <ul></ul>Optimizing MySQL Performance
 <li>Demonstrate ability to diagnose and optimize poorly-performing queries.</li>
-  <li></li>Tune MySQL Server configuration for best performance.</li>
-  <li>Apply best practices in optimizing schema objects Demonstrate understanding of locking concepts as applied to MySQL Server and storage engines.</li>
-  <li>Create and utilize table PARTITIONING</li>
-  </ul>
-  <ul></ul>Backups and Recovery in MySQL
+<li></li>Tune MySQL Server configuration for best performance.</li>
+<li>Apply best practices in optimizing schema objects Demonstrate understanding of locking concepts as applied to MySQL Server and storage engines.</li>
+<li>Create and utilize table PARTITIONING</li>
+</ul>
+  
+<ul>Backups and Recovery in MySQL
 <li>Create and restore logical backups using mysqldump</li>
 <li>Create and restore binary backups</li>
 <li?Use backups for data recovery</li>
 </ul>
-<ul></ul>High Availability Techniques for MySQL
+
+<ul>High Availability Techniques for MySQL
 <li>Describe, configure, deploy and troubleshoot MySQL replication</li>
 <li>Describe and contrast characteristics of common MySQL high availability solutions (MySQL Cluster, DRBD, Windows Failover Clustering, Solaris Cluster, OVM Template for MySQL Enterprise)</li>
 </ul>
@@ -56,6 +64,8 @@ Exam price is $245 Exam length is 150 minutes Number of questions is 100 multipl
 <li><Use MySQL client programs to interface with the MySQL Server interactively and in batch/li> 
 <li>Describe SQL Modes and their impact on behavior of MySQL</li> 
 <li>Identify characteristics which have session scope</li> 
+</ul>
+
 <ul>General MySQL Syntax
 <li>Explain MySQL implementation of identifiers including case sensitivity, qualified names, aliases and use of reserved words</li>
 <li>Identify MySQL data type properties and appropriate usage</li>
@@ -64,24 +74,30 @@ Exam price is $245 Exam length is 150 minutes Number of questions is 100 multipl
 <li>Describe and utilize prepared statements</li>
 <li>Describe transactions and transaction isolation levels and the impact they have on database behavior</li> 
 </ul>
+
 <ul>Creation and Design of MySQL Schema Objects
 <li>Design and create normalized databases</li>
 <li>Create and modify tables using appropriate data types and indexing</li>
 <li>Describe and create table constraints enforcing data integrity</li>
 <li>Creating and modifying views</li>
 <li>Identify and use various methods to obtain metadata for MySQL database objects</li>
+</ul>
+
 <ul>Creation, Design and Use of MySQL Stored Programs
 </li>Describe and use triggers</li>
 <li>Create and execute stored procedures</li>
 <li>Create and use stored functions</li>
 <li>Implement error handling within stored procedures</li>
 </ul>
+
 <ul>Querying for Data
 <li>Execute a basic SELECT statement</li>
 <li>Limit rows returned by a SELECT statement</li>
 <li>Limit columns returned by a SELECT statement</li>
 <li>Apply sorting to SELECT statement results</li>
 <li>Execute SELECT statements which aggregate and group data</li>
+</ul>
+
 <ul>Modifying Data
 <li>Describe and execute INSERT statements</li>
 </li>Describe and execute REPLACE statements</li>
@@ -89,10 +105,13 @@ Exam price is $245 Exam length is 150 minutes Number of questions is 100 multipl
 <li>Describe and execute TRUNCATE statements</li>
 <li>Describe and execute LOAD DATA statements</li><li>Describe and execute DELETE statements</li>
 </ul>
+
 <ul>Joins, subqueries and UNION
 <li>Identify, describe and use JOINs in MySQL commands</li> 
 <li>Describe and utilize subqueries in MySQL commands</li>
 <li>Perform operations using UNION clause</li> 
+</ul>
+
 <ul>MySQL Application Development
 <li>Identify key characteristics, features and options for PHP, Java and .NET development using MySQL standard drivers</li>
 <li>Write a basic Java application that uses MySQL</li>
@@ -101,6 +120,7 @@ Exam price is $245 Exam length is 150 minutes Number of questions is 100 multipl
 <li>Interpret MySQL error messages</li><li>Collect available diagnostic information</li>
 <li>Describe and use NoSQL and memcached API</li> 
 </uL>
+
 <ul>Basic Optimizations
 <li>Identify statements requiring optimization</li>
 <li>Recognize and create optimal indexes for query optimization</li>
@@ -108,5 +128,6 @@ Exam price is $245 Exam length is 150 minutes Number of questions is 100 multipl
 <li>Identify appropriate optimization strategies for InnoDB usage</li>
 <li>Optimize performance through data normalization</li>
 </ul>
+
 <hr width=50%>
 </body></html>
