--- a/56certs.html
+++ b/56certs.html
@@ -1,7 +1,7 @@
 <HTML><HEAD><TITLE>MySQL Certifications Currently Offered</TITLE></HEAD>
 <BODY>
 <h1>MySQL Certifications Oracle Exams</h1>
-<P>MySQL Certifications Oracle currently offers two certification exams. <b>Exam 1Z0-883</b> is for the <i>Oracle Certified 
+<P align="justify">MySQL Certifications Oracle currently offers two certification exams. <b>Exam 1Z0-883</b> is for the <i>Oracle Certified 
 Professional, MySQL 5.6 Database Administrator</i> certification and <b>exam 1Z0-882</b> is for <i></i>Oracle Certified 
 Professional, MySQL 5.6 Developer</i> certiciation. As of September 2015 there is a 20% discount for those taking both exams that includes one free retake. See https://www.mysql.com/certification/
 </p>
@@ -10,7 +10,7 @@ Professional, MySQL 5.6 Developer</i> certiciation. As of September 2015 there i
 
 Exam price is $245 Exam length is 150 minutes Number of questions is 100 multiple choice format Passing score is 64 percent Subject matter is based on General Availability (GA) versions of MySQL 5.6.
 
-<h3></h3>Exam topics
+<h3>Exam topics</h3>
 
 <ul>MySQL Architecture
 <li>Use MySQL client programs to interface with the MySQL Server interactively and in batch</li> 
@@ -100,7 +100,7 @@ Exam price is $245 Exam length is 150 minutes Number of questions is 100 multipl
 
 <ul>Modifying Data
 <li>Describe and execute INSERT statements</li>
-</li>Describe and execute REPLACE statements</li>
+<li>Describe and execute REPLACE statements</li>
 <li>Describe and execute UPDATE statements</li>
 <li>Describe and execute TRUNCATE statements</li>
 <li>Describe and execute LOAD DATA statements</li><li>Describe and execute DELETE statements</li>
