--- a/56certs.html
+++ b/56certs.html
@@ -2,11 +2,11 @@
 <BODY>
 <h1>MySQL Certifications Oracle Exams</h1>
 <P align="justify">MySQL Certifications Oracle currently offers two certification exams. <b>Exam 1Z0-883</b> is for the <i>Oracle Certified 
-Professional, MySQL 5.6 Database Administrator</i> certification and <b>exam 1Z0-882</b> is for <i></i>Oracle Certified 
-Professional, MySQL 5.6 Developer</i> certiciation. As of September 2015 there is a 20% discount for those taking both exams that includes one free retake. See https://www.mysql.com/certification/
+Professional, <A HREF="#DBA">MySQL 5.6 Database Administrator</A></i> certification and <b>exam 1Z0-882</b> is for <i></i>Oracle Certified 
+Professional, <a href=#devo">MySQL 5.6 Developer</A></i> certiciation. As of September 2015 there is a 20% discount for those taking both exams that includes one free retake. See https://www.mysql.com/certification/
 </p>
 
-<h2>MySQL 5.6 Database Administrator</h2>
+<h2><a name="dba">MySQL 5.6 Database Administrator</a></h2>
 
 Exam price is $245 Exam length is 150 minutes Number of questions is 100 multiple choice format Passing score is 64 percent Subject matter is based on General Availability (GA) versions of MySQL 5.6.
 
@@ -22,7 +22,7 @@ InnoDB, NDB, MyISAM, MEMORY, FEDERATED</li>
 <ul>MySQL Server Installation, Configuration and Maintenance</ul>
 <li?Select, deploy, start and stop MySQL using appropriate binary packages for Windows and Linux platforms</li>
 <li>Configure MySQL Server deployments using options files, command-line options and server variables.</li>
-<li></li>Identify, configure, locate and describe appropriate use cases for MySQL the error, binary, general query and slow query log.</li> 
+<li>Identify, configure, locate and describe appropriate use cases for MySQL the error, binary, general query and slow query log.</li> 
 </ul>
 
 <ul></ul>MySQL Security</ul?
@@ -54,7 +54,7 @@ InnoDB, NDB, MyISAM, MEMORY, FEDERATED</li>
 <li>Describe and contrast characteristics of common MySQL high availability solutions (MySQL Cluster, DRBD, Windows Failover Clustering, Solaris Cluster, OVM Template for MySQL Enterprise)</li>
 </ul>
 
-<h2>MySQL 5.6 Developer</h2>
+<h2><a name="devo">MySQL 5.6 Developer</a></h2>
 
 Exam price is $245 Exam length is 150 minutes Number of questions is 100 multiple choice format Passing score is 64 percent Subject matter is based on General Availability (GA) versions of MySQL 5.6.
 
