--- a/56certs.html
+++ b/56certs.html
@@ -19,26 +19,26 @@ Exam price is $245 Exam length is 150 minutes Number of questions is 100 multipl
 InnoDB, NDB, MyISAM, MEMORY, FEDERATED</li> 
 </ul>
 
-<ul>MySQL Server Installation, Configuration and Maintenance
-<li></a>Select, deploy, start and stop MySQL using appropriate binary packages for Windows and Linux platforms</li>
+<ul>MySQL Server Installation, Configuration and Maintenance</ul>
+<li?Select, deploy, start and stop MySQL using appropriate binary packages for Windows and Linux platforms</li>
 <li>Configure MySQL Server deployments using options files, command-line options and server variables.</li>
 <li>Identify, configure, locate and describe appropriate use cases for MySQL the error, binary, general query and slow query log.</li> 
 </ul>
 
-<ul></ul>MySQL Security</ul?
+<ul>MySQL Security
 <li>Describe appropriate steps to secure a MySQL deployment at the operating system, filesystem and network levels.</li>
 <li>Create and maintain user accounts with appropriate privileges and configuration.</li>
 <li>Deploy and configure MySQL Enterprise Audit</li>
 </ul>
 
-<ul></ul>Diagnostic Data and Metadata Sources in MySQL
+<ul>Diagnostic Data and Metadata Sources in MySQL
 <li>Configure and leverage PERFORMANCE_SCHEMA tables to identify and diagnose performance problems.</li>
 <li>Obtain MySQL metadata from INFORMATION_SCHEMA tables</li>
 </ul>
 
-<ul></ul>Optimizing MySQL Performance
+<ul>Optimizing MySQL Performance
 <li>Demonstrate ability to diagnose and optimize poorly-performing queries.</li>
-<li>Tune MySQL Server configuration for best performance.</li>
+<li></li>Tune MySQL Server configuration for best performance.</li>
 <li>Apply best practices in optimizing schema objects Demonstrate understanding of locking concepts as applied to MySQL Server and storage engines.</li>
 <li>Create and utilize table PARTITIONING</li>
 </ul>
@@ -84,7 +84,7 @@ Exam price is $245 Exam length is 150 minutes Number of questions is 100 multipl
 </ul>
 
 <ul>Creation, Design and Use of MySQL Stored Programs
-<li>Describe and use triggers</li>
+</li>Describe and use triggers</li>
 <li>Create and execute stored procedures</li>
 <li>Create and use stored functions</li>
 <li>Implement error handling within stored procedures</li>
