--- a/56certs.html
+++ b/56certs.html
@@ -6,7 +6,7 @@ Professional, <A HREF="#DBA">MySQL 5.6 Database Administrator</A></i> certificat
 Professional, <a href=#DEVO">MySQL 5.6 Developer</A></i> certiciation. As of September 2015 there is a 20% discount for those taking both exams that includes one free retake. See https://www.mysql.com/certification/
 </p>
 
-<h2><a name="DBA">MySQL 5.6 Database Administrator</a></h2>
+<h2 id="DBA">MySQL 5.6 Database Administrator</h2>
 
 Exam price is $245 Exam length is 150 minutes Number of questions is 100 multiple choice format Passing score is 64 percent Subject matter is based on General Availability (GA) versions of MySQL 5.6.
 
@@ -54,7 +54,7 @@ InnoDB, NDB, MyISAM, MEMORY, FEDERATED</li>
 <li>Describe and contrast characteristics of common MySQL high availability solutions (MySQL Cluster, DRBD, Windows Failover Clustering, Solaris Cluster, OVM Template for MySQL Enterprise)</li>
 </ul>
 
-<h2><a name="DEVO">MySQL 5.6 Developer</a></h2>
+<h2 id="DEVO">MySQL 5.6 Developer</h2>
 
 Exam price is $245 Exam length is 150 minutes Number of questions is 100 multiple choice format Passing score is 64 percent Subject matter is based on General Availability (GA) versions of MySQL 5.6.
 
