--- a/index.html
+++ b/index.html
@@ -17,5 +17,11 @@ We would like to establish a MySQL version of the wonderful <a href="http://phpm
 with a formal mentoring process.
 
 <h2><A href="#cert"></A>Certification</a></h2>
+We would like to expand the ranks of the MySQL Certifications.
+<ul>
+    <li><a href="56certs.html">MySQL 5.6 Certifications</a></li>
+</ul>
+
+<h2>User Groups</h2>
 </BODY>
 </HTML>
