--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@ We would like to expand the ranks of the MySQL Certifications.
     <li><a href="56certs.html">MySQL 5.6 Certifications</a></li>
 </ul>
 
+<h2>Useful Links</h2>
+<ul>tools
+<li>Monitoring Software</li>
+<li>Utilities</li>
+<li>Howtos</li>
+</ul>
+
 <h2>User Groups</h2>
 </BODY>
 </HTML>
