--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@ We would like to expand the ranks of the MySQL Certifications.
 </ul>
 
 <h2>Useful Links</h2>
+<uL>Latest MySQl Server Information
+<li><a href="http://www.thecompletelistoffeatures.com/">Complete List of MySQL 5.7 Features</a></li></uL>
 <ul>tools
 <li>Monitoring Software</li>
 <li>Utilities</li>
