--- a/56certs.html
+++ b/56certs.html
@@ -12,7 +12,7 @@ Exam price is $245 Exam length is 150 minutes Number of questions is 100 multipl
 
 <h3>Exam topics</h3>
 
-<ul>MySQL Architecture
+<ul><a href="MySQLArchitecture.html">MySQL Architecture</a>
 <li>Use MySQL client programs to interface with the MySQL Server interactively and in batch</li> 
 <li>Describe how MySQL uses disk and memory resources</li> 
 <li>List and describe key characteristics of standard MySQL storage engines including 
@@ -60,7 +60,7 @@ Exam price is $245 Exam length is 150 minutes Number of questions is 100 multipl
 
 <h3>Exam Topics</h3>
 
-<uL>MySQL Architecture
+<uL><a href="MySQLArchitecture.html">MySQL Architecture</a>
 <li><Use MySQL client programs to interface with the MySQL Server interactively and in batch/li> 
 <li>Describe SQL Modes and their impact on behavior of MySQL</li> 
 <li>Identify characteristics which have session scope</li> 
