--- a/56certs.html
+++ b/56certs.html
@@ -19,7 +19,7 @@ Exam price is $245 Exam length is 150 minutes Number of questions is 100 multipl
 InnoDB, NDB, MyISAM, MEMORY, FEDERATED</li> 
 </ul>
 
-<ul><a href="MySQlInstallation.html">MySQL Server Installation, Configuration and Maintenance</a>
+<ul><a href="MySQLInstallation.html">MySQL Server Installation, Configuration and Maintenance</a>
 <li?Select, deploy, start and stop MySQL using appropriate binary packages for Windows and Linux platforms</li>
 <li>Configure MySQL Server deployments using options files, command-line options and server variables.</li>
 <li>Identify, configure, locate and describe appropriate use cases for MySQL the error, binary, general query and slow query log.</li> 
@@ -66,7 +66,7 @@ Exam price is $245 Exam length is 150 minutes Number of questions is 100 multipl
 <li>Identify characteristics which have session scope</li> 
 </ul>
 
-<ul>General MySQL Syntax
+<ul><a href="GeneralMySQLSyntax.html">General MySQL Syntax</a>
 <li>Explain MySQL implementation of identifiers including case sensitivity, qualified names, aliases and use of reserved words</li>
 <li>Identify MySQL data type properties and appropriate usage</li>
 <li>Recognize and use common functions and expressions for all MySQL data types</li>
