Finish bottom three sections

--- a/GeneralMySQLSyntax.html
+++ b/GeneralMySQLSyntax.html
@@ -25,6 +25,26 @@
 <li><a href="http://dev.mysql.com/doc/refman/5.6/en/timestamp-initialization.html">Timestamp Initialization</a></li>
 </ul>
 <h3>Recognize and use common functions and expressions for all MySQL data types</h3>
+<ul>
+<li><a href="https://dev.mysql.com/doc/refman/5.6/en/functions.html">Functions and Operators</a></li>
+</ul>
 <h3>Identify and use comment syntax</h3>
+<ul>
+<li><a href="https://dev.mysql.com/doc/refman/5.6/en/comments.html">Comment Syntax</a></li>
+</ul>
 <h3>Describe and utilize prepared statements</h3>
-<h3>Describe transactions and transaction isolation levels and the impact they have on database behavior </h3>
+<ul>
+<li><a href="http://dev.mysql.com/doc/refman/5.6/en/sql-syntax-prepared-statements.html">Preapred Statement Syntax</a></li>
+</ul>
+<h3>Describe transactions and transaction isolation levels and the impact they have on database behavior</h3>
+<ul>
+<li><a href="http://dev.mysql.com/doc/refman/5.6/en/commit.html">START TRANSACTION, COMMIT, and ROLLBACK Syntax</a></li>
+<li><a href="https://dev.mysql.com/doc/refman/5.0/en/ansi-diff-transactions.html">Transactions and Atomic Operations"</a></li>
+<li><a href="https://dev.mysql.com/doc/refman/5.6/en/dynindex-isolevel.html">Transaction Isolation Level Index</a><li>
+<li><a href="https://dev.mysql.com/doc/refman/5.6/en/sql-mode.html">SQL Modes</a></li>
+</ul>
+
+
+<hr width="50%">
+</body>
+</html>
